Ajustes de sources nos cards

--- a/components/card-dinnieApp.html
+++ b/components/card-dinnieApp.html
@@ -1,11 +1,11 @@
 <div class="card h-100 shadow-sm">
   <div class="card-inner">
     <div class="card-front">
-      <img src="assets/dinnieApp/Capa_Dinnie.jpg" class="card-img-top" alt="dinnieApp">
+      <img src="../assets/dinnieApp/Capa_Dinnie.jpg" class="card-img-top" alt="dinnieApp">
     </div>
     <div class="card-back">
       <h6>made at college</h6>
-      <h5 class="card-title"><a href="projects/dinnieapp.html" target="_self">Dinnie</a></h5>
+      <h5 class="card-title"><a href="../projects/dinnieapp.html" target="_self">Dinnie</a></h5>
       <p class="card-text">Feed the net</p>
       <div class="project-tags">
         <a href="tags/branding.html" class="tag">Branding</a>
