--- a/components/card-einsteroids.html
+++ b/components/card-einsteroids.html
@@ -1,11 +1,11 @@
 <div class="card h-100 shadow-sm">
     <div class="card-inner">
       <div class="card-front">
-        <img src="assets/einsteroids/Einsteroid_Cover.gif" class="card-img-top" alt="einsteroid">
+        <img src="../assets/einsteroids/Einsteroid_Cover.gif" class="card-img-top" alt="einsteroid">
       </div>
       <div class="card-back">
         <h6>made at college</h6>
-        <h5 class="card-title"><a href="projects/einsteroids.html" target="_self">Einsteroids</a></h5>
+        <h5 class="card-title"><a href="../projects/einsteroids.html" target="_self">Einsteroids</a></h5>
         <p class="card-text">Physics can also be very fun</p>
         <div class="project-tags">
           <a href="tags/ui-ux.html" class="tag">UI/UX</a>
