--- a/components/card-gamesHub.html
+++ b/components/card-gamesHub.html
@@ -5,7 +5,7 @@
       </div>
       <div class="card-back">
         <h6>made at Bemobi</h6>
-        <h5 class="card-title"><a href="projects/gamesHub.html" target="_self">Games Hub</a></h5>
+        <h5 class="card-title"><a href="../projects/gamesHub.html" target="_self">Games Hub</a></h5>
         <p class="card-text">Cross-platform gaming ecosystem design</p>
         <div class="project-tags">
           <a href="tags/ui-ux.html" class="tag">UI/UX</a>
