--- a/components/card-harryPotter.html
+++ b/components/card-harryPotter.html
@@ -1,11 +1,11 @@
 <div class="card h-100 shadow-sm">
   <div class="card-inner">
     <div class="card-front">
-      <img src="assets/harryPotter/HarryPotterEOMinimalismoEstetico_Capa.jpg" class="card-img-top" alt="harryPotter">
+      <img src="../assets/harryPotter/HarryPotterEOMinimalismoEstetico_Capa.jpg" class="card-img-top" alt="harryPotter">
     </div>
     <div class="card-back">
       <h6>made at college</h6>
-      <h5 class="card-title"><a href="projects/harrypotter.html" target="_self">Harry Potter</a></h5>
+      <h5 class="card-title"><a href="../projects/harrypotter.html" target="_self">Harry Potter</a></h5>
       <p class="card-text">Aesthetic Minimalism with Vector Illustration</p>
       <div class="project-tags">
         <a href="tags/illustration.html" class="tag">Illustration</a>
