--- a/components/card-pikachu.html
+++ b/components/card-pikachu.html
@@ -1,11 +1,11 @@
 <div class="card h-100 shadow-sm">
   <div class="card-inner">
     <div class="card-front">
-      <img src="assets/pikachu/Pikachu-Card-Cover.jpg" class="card-img-top" alt="pikachuCalendar">
+      <img src="../assets/pikachu/Pikachu-Card-Cover.jpg" class="card-img-top" alt="pikachuCalendar">
     </div>
     <div class="card-back">
       <h6>made at College</h6>
-      <h5 class="card-title"><a href="projects/pikachu.html" target="_self">Pikachu 2020 Calendar</a></h5>
+      <h5 class="card-title"><a href="../projects/pikachu.html" target="_self">Pikachu 2020 Calendar</a></h5>
       <p class="card-text">Sistemic design in practice</p>
       <div class="project-tags">
         <a href="tags/editorial.html" class="tag">Editorial</a>
