--- a/components/card-milejao.html
+++ b/components/card-milejao.html
@@ -1,11 +1,11 @@
 <div class="card h-100 shadow-sm">
   <div class="card-inner">
     <div class="card-front">
-      <img src="assets/milejao/BESFCMJ-1.jpg" class="card-img-top" alt="milejao">
+      <img src="../assets/milejao/BESFCMJ-1.jpg" class="card-img-top" alt="milejao">
     </div>
     <div class="card-back">
       <h6>made at college</h6>
-      <h5 class="card-title"><a href="projects/milejao.html" target="_self">MileJão</a></h5>
+      <h5 class="card-title"><a href="../projects/milejao.html" target="_self">MileJão</a></h5>
       <p class="card-text">Build and enjoy a book made for you</p>
       <div class="project-tags">
         <a href="tags/illustration.html" class="tag">Illustration</a>
