Ajustes de sources nos cards

--- a/components/card-dinnieApp.html
+++ b/components/card-dinnieApp.html
@@ -5,7 +5,7 @@
     </div>
     <div class="card-back">
       <h6>made at college</h6>
-      <h5 class="card-title"><a href="../projects/dinnieapp.html" target="_self">Dinnie</a></h5>
+      <h5 class="card-title"><a href="../projects/dinnieApp.html" target="_self">Dinnie</a></h5>
       <p class="card-text">Feed the net</p>
       <div class="project-tags">
         <a href="tags/branding.html" class="tag">Branding</a>
