--- a/components/card-harryPotter.html
+++ b/components/card-harryPotter.html
@@ -5,7 +5,7 @@
     </div>
     <div class="card-back">
       <h6>made at college</h6>
-      <h5 class="card-title"><a href="../projects/harrypotter.html" target="_self">Harry Potter</a></h5>
+      <h5 class="card-title"><a href="../projects/harryPotter.html" target="_self">Harry Potter</a></h5>
       <p class="card-text">Aesthetic Minimalism with Vector Illustration</p>
       <div class="project-tags">
         <a href="tags/illustration.html" class="tag">Illustration</a>
