--- a/components/card-plexoArte.html
+++ b/components/card-plexoArte.html
@@ -5,7 +5,7 @@
     </div>
     <div class="card-back">
       <h6>made at college</h6>
-      <h5 class="card-title"><a href="../projects/plexoarte.html" target="_self">Plexo Arte</a></h5>
+      <h5 class="card-title"><a href="../projects/plexoArte.html" target="_self">Plexo Arte</a></h5>
       <p class="card-text">Art exhibitions to open discussions</p>
       <div class="project-tags">
         <a href="tags/branding.html" class="tag">Branding</a>
