--- a/components/card-cucaCatch.html
+++ b/components/card-cucaCatch.html
@@ -5,7 +5,7 @@
       </div>
       <div class="card-back">
         <h6>made at Apple Developer Academy</h6>
-        <h5 class="card-title"><a href="../projects/cucacatch.html" target="_self">Cuca Catch</a></h5>
+        <h5 class="card-title"><a href="../projects/cucaCatch.html" target="_self">Cuca Catch</a></h5>
         <p class="card-text">Gaming production from research to launching</p>
         <div class="project-tags">
           <a href="tags/ui-ux.html" class="tag">UI/UX</a>
