--- a/components/card-riccchLadies.html
+++ b/components/card-riccchLadies.html
@@ -5,7 +5,7 @@
     </div>
     <div class="card-back">
       <h6>made at college</h6>
-      <h5 class="card-title"><a href="../projects/riccchladies.html" target="_self">Riccch Ladies</a></h5>
+      <h5 class="card-title"><a href="../projects/riccchLadies.html" target="_self">Riccch Ladies</a></h5>
       <p class="card-text">When Fashion meets Digital</p>
       <div class="project-tags">
         <a href="tags/illustration.html" class="tag">Illustration</a>
