Correção no caminho dos cards

--- a/components/card_strawberry-popsicles.html
+++ b/components/card_strawberry-popsicles.html
@@ -1,11 +1,11 @@
 <div class="card h-100 shadow-sm">
   <div class="card-inner">
     <div class="card-front">
-      <img src="../assets/strawberry-popsicles/GeladinhosDeMorango-Capa.png" class="card-img-top" alt="strawberryPopsicles">
+      <img src="assets/strawberry-popsicles/GeladinhosDeMorango-Capa.png" class="card-img-top" alt="strawberryPopsicles">
     </div>
     <div class="card-back">
       <h6>made at college</h6>
-      <h5 class="card-title"><a href="../projects/strawberry-popsicles.html" target="_self">Strawberry Popsicles</a></h5>
+      <h5 class="card-title"><a href="projects/strawberry-popsicles.html" target="_self">Strawberry Popsicles</a></h5>
       <p class="card-text">An Illustration series</p>
       <div class="project-tags">
         <a href="tags/illustration.html" class="tag">Illustration</a>
