--- a/components/card_games-hub.html
+++ b/components/card_games-hub.html
@@ -1,11 +1,11 @@
 <div class="card h-100 shadow-sm">
     <div class="card-inner">
       <div class="card-front">
-        <img src="../assets/gamesHub/gamersHub-cardCover.png" class="card-img-top" alt="Games Hub">
+        <img src="assets/games-hub/gamersHub-cardCover.png" class="card-img-top" alt="Games Hub">
       </div>
       <div class="card-back">
         <h6>made at Bemobi</h6>
-        <h5 class="card-title"><a href="../projects/gamesHub.html" target="_self">Games Hub</a></h5>
+        <h5 class="card-title"><a href="projects/games-hub.html" target="_self">Games Hub</a></h5>
         <p class="card-text">Cross-platform gaming ecosystem design</p>
         <div class="project-tags">
           <a href="tags/ui-ux.html" class="tag">UI/UX</a>
