--- a/components/card_plexo-arte.html
+++ b/components/card_plexo-arte.html
@@ -1,11 +1,11 @@
 <div class="card h-100 shadow-sm">
   <div class="card-inner">
     <div class="card-front">
-      <img src="../assets/plexoArte/PlexoArte_Capa.gif" class="card-img-top" alt="plexoArte">
+      <img src="assets/plexo-arte/PlexoArte_Capa.gif" class="card-img-top" alt="plexoArte">
     </div>
     <div class="card-back">
       <h6>made at college</h6>
-      <h5 class="card-title"><a href="../projects/plexoArte.html" target="_self">Plexo Arte</a></h5>
+      <h5 class="card-title"><a href="projects/plexo-arte.html" target="_self">Plexo Arte</a></h5>
       <p class="card-text">Art exhibitions to open discussions</p>
       <div class="project-tags">
         <a href="tags/branding.html" class="tag">Branding</a>
