Correção no caminho dos cards

--- a/css/footer.css
+++ b/css/footer.css
@@ -19,7 +19,7 @@ footer ul {
 }
 
 footer strong {
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Bricolage Grotesque', sans-serif;
   color: cyan;
   font-weight: 400;
   padding-bottom: 0.5rem;
