--- a/css/header.css
+++ b/css/header.css
@@ -28,7 +28,7 @@
 .nav-link {
   font-size: 1rem;
   font-weight: 500 !important;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Bricolage Grotesque', sans-serif;
   padding: 0.8rem 1.5rem !important; /* Ajustado levemente para equilíbrio */
   line-height: 1;
   display: flex;
