--- a/css/cards.css
+++ b/css/cards.css
@@ -12,9 +12,9 @@
 }
 
 .card-title {
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Bricolage Grotesque', sans-serif;
   text-align: left;
-  font-weight: 900;
+  font-weight: 800;
   font-size: 2rem;
   color: white !important;
 }
