--- a/css/table.css
+++ b/css/table.css
@@ -21,7 +21,7 @@
 table {
     width: 100%;
     border-collapse: collapse;
-    font-family: 'Kanit', sans-serif;
+    font-family: 'Geist', sans-serif;
     /* Bordas de destaque do seu design */
     border-top: 1px solid var(--grey-800) !important;
     border-bottom: 1px solid var(--grey-800) !important;
