Fix: ajustando caminhos das imagens nos componentes

--- a/components/card_cuca-catch.html
+++ b/components/card_cuca-catch.html
@@ -1,7 +1,7 @@
 <div class="card h-100 shadow-sm">
     <div class="card-inner">
       <div class="card-front">
-        <img src="../assets/cuca-catch/CucaCatch-Gif.gif" class="card-img-top" alt="cucaCatch">
+        <img src="assets//cuca-catch/CucaCatch-Gif.gif" class="card-img-top" alt="cucaCatch">
       </div>
       <div class="card-back">
         <h6>made at Apple Developer Academy</h6>
