--- a/components/card_gamezilla.html
+++ b/components/card_gamezilla.html
@@ -1,7 +1,7 @@
 <div class="card h-100 shadow-sm">
     <div class="card-inner">
       <div class="card-front">
-        <img src="../assets/gamezilla/Wallpaper.png" class="card-img-top" alt="gamezilla">
+        <img src="assets//gamezilla/Wallpaper.png" class="card-img-top" alt="gamezilla">
       </div>
       <div class="card-back">
         <h6>made at Bemobi</h6>
