--- a/components/card_harry-potter.html
+++ b/components/card_harry-potter.html
@@ -1,7 +1,7 @@
 <div class="card h-100 shadow-sm">
   <div class="card-inner">
     <div class="card-front">
-      <img src="../assets/harry-potter/HarryPotterEOMinimalismoEstetico_Capa.jpg" class="card-img-top" alt="harryPotter">
+      <img src="assets//harry-potter/HarryPotterEOMinimalismoEstetico_Capa.jpg" class="card-img-top" alt="harryPotter">
     </div>
     <div class="card-back">
       <h6>made at college</h6>
