--- a/components/card_milejao.html
+++ b/components/card_milejao.html
@@ -1,7 +1,7 @@
 <div class="card h-100 shadow-sm">
   <div class="card-inner">
     <div class="card-front">
-      <img src="../assets/milejao/BESFCMJ-1.jpg" class="card-img-top" alt="milejao">
+      <img src="assets//milejao/BESFCMJ-1.jpg" class="card-img-top" alt="milejao">
     </div>
     <div class="card-back">
       <h6>made at college</h6>
