--- a/components/card_riccch-ladies.html
+++ b/components/card_riccch-ladies.html
@@ -1,7 +1,7 @@
 <div class="card h-100 shadow-sm">
   <div class="card-inner">
     <div class="card-front">
-      <img src="../assets/riccch-ladies/AsRicccas_1_Small.jpg" class="card-img-top" alt="richLadies">
+      <img src="assets//riccch-ladies/AsRicccas_1_Small.jpg" class="card-img-top" alt="richLadies">
     </div>
     <div class="card-back">
       <h6>made at college</h6>
