--- a/components/card_pikachu.html
+++ b/components/card_pikachu.html
@@ -1,7 +1,7 @@
 <div class="card h-100 shadow-sm">
   <div class="card-inner">
     <div class="card-front">
-      <img src="../assets/pikachu/Pikachu-Card-Cover.jpg" class="card-img-top" alt="pikachuCalendar">
+      <img src="assets//pikachu/Pikachu-Card-Cover.jpg" class="card-img-top" alt="pikachuCalendar">
     </div>
     <div class="card-back">
       <h6>made at College</h6>
