--- a/components/header.html
+++ b/components/header.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-xxl">
       <a href="/" target="_self">
-        <img src="../assets/lucasAraujo-logoHorizontal.svg" alt="logo" class="logo">
+        <img src="/assets/lucasAraujo-logoHorizontal.svg" alt="logo" class="logo">
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -20,7 +20,7 @@
           </li>
           -->
           <li class="nav-item">
-            <a class="nav-link fw-semibold text-display" href="/projects/aboutme.html">profile</a>
+            <a class="nav-link fw-semibold text-display" href="/projects/about-me.html">profile</a>
           </li>
         </ul>
       </div>
